Fixed all outstanding linker issues.  DL2 v3.19 can now be regnerated bit-for-bit.